# Automotive_CAD_Copilot

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: datasets.yaml  standards.yaml
data/: README.md
data/raw/public/abc-dataset/: SOURCE.txt
data/raw/public/trview2cad/: DOWNLOAD_ERROR.txt  SOURCE.txt
samples/: sample_checklist.csv  sample_ocr.txt
scripts/: download_datasets.py  prepare_internal_dataset.py  train_vision_reviewer.py
src/cdcopilot/: __init__.py  api.py  cli.py  ocr.py  rules.py  schemas.py
tests/: test_rules.py
web/: app.js  index.html  styles.css
